--- a/Leetcode/2023.md
+++ b/Leetcode/2023.md
@@ -4,3 +4,4 @@
 * Jun. 17th: [1187. Make Array Strictly Increasing](https://leetcode.com/problems/make-array-strictly-increasing/)
 * Jun. 19th: [1968. Array With Elements Not Equal to Average of Neighbors](https://leetcode.com/problems/array-with-elements-not-equal-to-average-of-neighbors/)
 * Jun. 20th: [2090. K Radius Subarray Averages](https://leetcode.com/problems/k-radius-subarray-averages/)
+* Jun. 25th: [822. Card Flipping Game](https://leetcode.com/problems/card-flipping-game/)
