--- a/Leetcode/2023.md
+++ b/Leetcode/2023.md
@@ -5,3 +5,4 @@
 * Jun. 19th: [1968. Array With Elements Not Equal to Average of Neighbors](https://leetcode.com/problems/array-with-elements-not-equal-to-average-of-neighbors/)
 * Jun. 20th: [2090. K Radius Subarray Averages](https://leetcode.com/problems/k-radius-subarray-averages/)
 * Jun. 25th: [822. Card Flipping Game](https://leetcode.com/problems/card-flipping-game/)
+* Jun. 26th: [2462. Total Cost to Hire K Workers](https://leetcode.com/problems/total-cost-to-hire-k-workers/)
