--- a/Leetcode/2023.md
+++ b/Leetcode/2023.md
@@ -6,3 +6,4 @@
 * Jun. 20th: [2090. K Radius Subarray Averages](https://leetcode.com/problems/k-radius-subarray-averages/)
 * Jun. 25th: [822. Card Flipping Game](https://leetcode.com/problems/card-flipping-game/)
 * Jun. 26th: [2462. Total Cost to Hire K Workers](https://leetcode.com/problems/total-cost-to-hire-k-workers/)
+* Jun. 27th: [373. Find K Pairs with Smallest Sums](https://leetcode.com/problems/find-k-pairs-with-smallest-sums/)
