--- a/Leetcode/2023.md
+++ b/Leetcode/2023.md
@@ -8,3 +8,4 @@
 * Jun. 26th: [2462. Total Cost to Hire K Workers](https://leetcode.com/problems/total-cost-to-hire-k-workers/)
 * Jun. 27th: [373. Find K Pairs with Smallest Sums](https://leetcode.com/problems/find-k-pairs-with-smallest-sums/)
 * Jun. 28th: [1514. Path with Maximum Probability](https://leetcode.com/problems/path-with-maximum-probability/)
+* Jun. 29th: [2410. Maximum Matching of Players With Trainers](https://leetcode.com/problems/maximum-matching-of-players-with-trainers/)
