--- a/Leetcode/2023.md
+++ b/Leetcode/2023.md
@@ -9,3 +9,4 @@
 * Jun. 27th: [373. Find K Pairs with Smallest Sums](https://leetcode.com/problems/find-k-pairs-with-smallest-sums/)
 * Jun. 28th: [1514. Path with Maximum Probability](https://leetcode.com/problems/path-with-maximum-probability/)
 * Jun. 29th: [2410. Maximum Matching of Players With Trainers](https://leetcode.com/problems/maximum-matching-of-players-with-trainers/)
+* Jun. 30th: [740. Delete and Earn](https://leetcode.com/problems/delete-and-earn/)
