--- a/Leetcode/2023.md
+++ b/Leetcode/2023.md
@@ -10,3 +10,6 @@
 * Jun. 28th: [1514. Path with Maximum Probability](https://leetcode.com/problems/path-with-maximum-probability/)
 * Jun. 29th: [2410. Maximum Matching of Players With Trainers](https://leetcode.com/problems/maximum-matching-of-players-with-trainers/)
 * Jun. 30th: [740. Delete and Earn](https://leetcode.com/problems/delete-and-earn/)
+* Jul. 1th: [2751. Robot Collisions](https://leetcode.com/problems/robot-collisions/)
+* Jul. 3th: [2342. Max Sum of a Pair With Equal Sum of Digits](https://leetcode.com/problems/max-sum-of-a-pair-with-equal-sum-of-digits/)
+* Jul.4th: [491. Non-decreasing Subsequences](https://leetcode.com/problems/non-decreasing-subsequences/)
