--- a/Leetcode/2023.md
+++ b/Leetcode/2023.md
@@ -12,4 +12,5 @@
 * Jun. 30th: [740. Delete and Earn](https://leetcode.com/problems/delete-and-earn/)
 * Jul. 1th: [2751. Robot Collisions](https://leetcode.com/problems/robot-collisions/)
 * Jul. 3th: [2342. Max Sum of a Pair With Equal Sum of Digits](https://leetcode.com/problems/max-sum-of-a-pair-with-equal-sum-of-digits/)
-* Jul.4th: [491. Non-decreasing Subsequences](https://leetcode.com/problems/non-decreasing-subsequences/)
+* Jul. 4th: [491. Non-decreasing Subsequences](https://leetcode.com/problems/non-decreasing-subsequences/)
+* Jul. 5th: [1442. Count Triplets That Can Form Two Arrays of Equal XOR](https://leetcode.com/problems/count-triplets-that-can-form-two-arrays-of-equal-xor/)
